--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
                   <h4 class="Messenger_prompt">How can we help you?</h4> <span class="chat_close_icon"><i class="fa fa-window-close" aria-hidden="true"></i></span> </div>
                 <div class="Messenger_content">
                   <div class="Messages">
-                    <div class="Messages_list"></div>
+                    <div id="Messages_list" class="Messages_list"></div>
                   </div>
                   <div class="Input Input-blank">
-                    <textarea class="Input_field" placeholder="Send a message..." style="height: 20px;"></textarea>
+                    <textarea id="input_field" class="Input_field" placeholder="Send a message..." style="height: 20px;"></textarea>
                     <button class="Input_button Input_button-emoji">
                       <div class="Icon" style="width: 18px; height: 18px;">
                         <svg width="56px" height="56px" viewBox="1332 47 56 56" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" style="width: 18px; height: 18px;">
@@ -49,7 +49,7 @@
                         </svg>
                       </div>
                     </button>
-                    <button class="Input_button Input_button-send">
+                    <button id="Send_button" class="Input_button Input_button-send">
                       <div class="Icon" style="width: 18px; height: 18px;">
                         <svg width="57px" height="54px" viewBox="1496 193 57 54" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" style="width: 18px; height: 18px;">
                           <g id="Group-9-Copy-3" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" transform="translate(1523.000000, 220.000000) rotate(-270.000000) translate(-1523.000000, -220.000000) translate(1499.000000, 193.000000)">
@@ -81,11 +81,6 @@
 </html>
 
 
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
-
-<script src="script.js"></script>
-</body>
 
 
 
